Nav bar and projects page
I added a navbar and a page to display my projects

--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+    <header>
         <meta charset="UTF-8">
-        <title>Cristobal De Oyarzabal Barba's Portolio</title>
+        <title>Projects Page</title>
         <link rel="stylesheet" href="styles.css" />
         <nav>
             <ul>
@@ -10,9 +10,9 @@
                 <li><a href="projects.html">Projects</a></li>
             </ul>
         </nav>
-    </head>
+    </header>
     <body>
-        <h1>Hi, I am Cristobal!</h1>
-        <h3>This is my web design portafolio</h3>
+        <h1>Page in Progress</h1>
+        <h2>Links to previous projects will be displayed here</h2>
     </body>
 </html>
