--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Cristobal De Oyarzabal Barba's Portolio</title>
+        <title>Cristobal De Oyarzabal Barba's Portfolio</title>
         <link rel="stylesheet" href="styles.css" />
         <nav>
             <ul>
@@ -13,6 +13,6 @@
     </head>
     <body>
         <h1>Hi, I am Cristobal!</h1>
-        <h3>This is my web design portafolio</h3>
+        <h3>This is my web design portfolio</h3>
     </body>
 </html>
