--- a/portfolio.html
+++ b/portfolio.html
@@ -4,15 +4,21 @@
         <meta charset="UTF-8">
         <title>Cristobal De Oyarzabal Barba's Portfolio</title>
         <link rel="stylesheet" href="styles.css" />
-        <nav>
+    </head>
+    <body>
+    <header>
+            <h1>Cristobal's Portfolio</h1>
+            <nav>
             <ul>
                 <li><a href="portfolio.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
             </ul>
         </nav>
-    </head>
-    <body>
+    </header>
+    <main>
         <h1>Hi, I am Cristobal!</h1>
         <h3>This is my web design portfolio</h3>
+    </main>
+    
     </body>
 </html>
