--- a/projects.html
+++ b/projects.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <header>
+    <head>
         <meta charset="UTF-8">
         <title>Projects Page</title>
         <link rel="stylesheet" href="styles.css" />
-        <nav>
+        
+    </head>
+    <body>
+        <header>
+            <h1>Cristobal's Portfolio</h1>
+            <nav>
             <ul>
                 <li><a href="portfolio.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
             </ul>
         </nav>
-    </header>
-    <body>
-        <h1>Page in Progress</h1>
-        <h2>Links to previous projects will be displayed here</h2>
+        </header>
+        <main>
+            <h1>Page in Progress</h1>
+            <h2>Links to previous projects will be displayed here</h2>
+        </main>
+        
     </body>
 </html>
